stories/Organism/Blocks/Authorcard/authorsummary.scss
@import '../../../assets/scss/mixins';
@import '../../../assets/scss/breakpoints';
@import '../../../assets/scss/variables';

/* author summary start */
.author-summary {
  border-top: 2px solid $color-black;
  padding-top: $spacing-32;

  @include devicebreak(medium) {
    display: flex;
    justify-content: space-between;
  }

  &-wrapper {
    h4 {
      margin-bottom: 2.438rem;
    }
  }

  &-left {
    @include devicebreak(medium) {
      display: flex;
      width: 50%;
    }
  }

  &-right {
    @include devicebreak(medium) {
      width: 40%;
    }
  }

  &-text {
    margin-top: $spacing-40;

    @include devicebreak(medium) {
      margin-left: $spacing-40;
      margin-top: 0;
      width: calc(100% - 222px);
    }

    h2 {
      margin-bottom: $spacing-08;
    }
  }
}

[dir='rtl'] {
  .author-summary {
    &-text {
      @include devicebreak(medium) {
        margin-left: 0;
        margin-right: $spacing-40;
      }
    }
  }
}

/* author summary end */

